app/global-bank/global-bank-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global-bank-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: global-bank-dev
  template:
    metadata:
      name: global-bank-dev
      labels:
        app: global-bank-dev
    spec:
      volumes:
      - name: dind-storage
        emptyDir: {}
      - name: appdev
        emptyDir: {}  
      containers:
      - name: global-bank-dev
        image: brainupgrade/global-bank-dev:1.0.0
        command:
        - cat
        tty: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c","cd /appdev && ln -s /app ."]
        volumeMounts:
        - mountPath: /appdev
          name: appdev
        - name: dind-storage
          mountPath: /var/lib/docker
      - name: dind
        image: brainupgrade/docker:20-dind
        securityContext:
          privileged: true
        volumeMounts:
          - name: dind-storage
            mountPath: /var/lib/docker
          - name: appdev
            mountPath: /appdev
