app/global-bank/global-frontend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devtools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devtools
  template:
    metadata:
      name: devtools
      labels:
        app: devtools
    spec:
      volumes:
      - name: dind-storage
        emptyDir: {}
      - name: appdev
        emptyDir: {}  
      containers:
      - name: devtools
        image: brainupgrade/global-bank-dev:1.0.0
        command:
        - cat
        tty: true
        volumeMounts:
        - mountPath: /appdev
          name: appdev
      - name: dind
        image: docker:19.03.3-dind
        securityContext:
          privileged: true
        volumeMounts:
          - name: dind-storage
            mountPath: /var/lib/docker
          - name: appdev
            mountPath: /appdev
