app/global-bank/01-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: global-bank
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: global-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: brainupgrade/global-bank-frontend:1.0.0
        name: frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: nginx
