app/global-bank/02-rules.yaml
apiVersion: v1
kind: Service
metadata:
  name: rules
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: rules
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rules
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rules
  template:
    metadata:
      labels:
        app: rules
    spec:
      containers:
      - image: brainupgrade/global-bank-rules:1.0.0
        name: rules
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
