app/global-bank/02b-authentication.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
  namespace: global-bank
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: authentication
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  namespace: global-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
      - image: brainupgrade/global-bank-authentication:1.0.0
        name: authentication
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
