app/global-bank/04b-account.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - image: brainupgrade/global-bank-account:1.0.0
        name: account
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
