app/global-bank/04b-customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: global-bank
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: customer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: global-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - image: brainupgrade/global-bank-customer:1.0.0
        name: customer
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
