app/global-bank/05a-transaction-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-db
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 3306
      targetPort: 3306
  selector:
    app: transaction-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-db
  template:
    metadata:
      labels:
        app: transaction-db
    spec:
      containers:
      - image: mariadb:10.3
        name: transaction-db
        ports:
        - containerPort: 3306
          name: tcp
