app/global-bank/06b-transaction.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction
  namespace: global-bank
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: transaction
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
  namespace: global-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
      - image: brainupgrade/global-bank-transaction:1.0.0
        name: transaction
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
